[package]
name = "tlc_background_removal"
version = "0.0.1"
authors = ["Mark Boss <mark.boss@uni-tuebingen.de>"]
edition = "2018"


[lib]
name = "tlc_background_removal"

[dependencies]
tlc_common = {path = "../common"}
image = "0.23.9"
imageproc = "0.21.0"
linregress = "0.4.0"
halton = "0.2.1"
itertools = "0.9.0"
itertools-num = "0.1.3"
primes = "0.3.0"
log = "0.4.11"

[dev-dependencies]
pretty_assertions = "0.6.1"
assert_approx_eq = "1.1.0"