[package]
name = "tlc_background_removal"
version = "0.0.1"
authors = ["Mark Boss <mark.boss@uni-tuebingen.de>"]
edition = "2018"


[lib]
name = "tlc_background_removal"

[dependencies]
tlc_common = {path = "../common"}
image = "0.24.3"
imageproc = "0.23.0"
linregress = "0.5.0"
halton = "0.2.1"
itertools = "0.10.3"
itertools-num = "0.1.3"
primes = "0.3.0"
log = "0.4.11"

[dev-dependencies]
pretty_assertions = "1.2.1"
assert_approx_eq = "1.1.0"