[package]
name = "tlc_blob_integration"
version = "0.0.1"
authors = ["Mark Boss <mark.boss@uni-tuebingen.de>"]
edition = "2018"


[lib]
name = "tlc_blob_integration"

[dependencies]
tlc_common = {path = "../common"}
image = "0.24.3"
nalgebra = "0.31.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
criterion = "0.3.3"