[package]
name = "tlc_reference_percent_fitter"
version = "0.0.1"
authors = ["Mark Boss <mark.boss@uni-tuebingen.de>"]
edition = "2018"


[lib]
name = "tlc_reference_percent_fitter"

[dependencies]
tlc_common = {path = "../common"}
linregress = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
assert_approx_eq = "1.1.0"